--- a/app/config/framework/doctrine.yml
+++ b/app/config/framework/doctrine.yml
@@ -13,3 +13,5 @@ doctrine:
         auto_generate_proxy_classes: "%kernel.debug%"
         naming_strategy: doctrine.orm.naming_strategy.underscore
         auto_mapping: true
+        resolve_target_entities:
+            Acme\Domain\Blog\Model\Author: Acme\Infrastructure\Bundle\AppBundle\Entity\User
