--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -1,11 +1,13 @@
-# To get started with security, check out the documentation:
-# http://symfony.com/doc/current/book/security.html
 security:
 
-    # http://symfony.com/doc/current/book/security.html#where-do-users-come-from-user-providers
+    encoders:
+        Symfony\Component\Security\Core\User\UserInterface: bcrypt
+
     providers:
-        in_memory:
-            memory: ~
+        main:
+            entity:
+                class:    Acme\Infrastructure\Bundle\AppBundle\Entity\User
+                property: username
 
     firewalls:
         # disables authentication for assets and the profiler, adapt it according to your needs
@@ -14,11 +16,24 @@ security:
             security: false
 
         main:
-            anonymous: ~
-            # activate different ways to authenticate
+            pattern:   ^/
+            anonymous: true
+            provider:  main
+            form_login:
+                login_path:         security_login
+                check_path:         security_authenticate
+                username_parameter: username
+                password_parameter: password
+            logout:
+                path:   security_logout
+                target: security_login
+            remember_me:
+                secret:                "%secret%"
+                lifetime:              31536000 # 365 days
+                path:                  /
+                domain:                ~
+                remember_me_parameter: remember
 
-            # http_basic: ~
-            # http://symfony.com/doc/current/book/security.html#a-configuring-how-your-users-will-authenticate
-
-            # form_login: ~
-            # http://symfony.com/doc/current/cookbook/security/form_login_setup.html
+    access_control:
+        - { path: ^/login$, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/,       roles: IS_AUTHENTICATED_REMEMBERED }
