--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,11 @@
         "symfony/polyfill-apcu": "^1.0",
         "sensio/distribution-bundle": "^5.0",
         "sensio/framework-extra-bundle": "^3.0.2",
-        "incenteev/composer-parameter-handler": "^2.0"
+        "incenteev/composer-parameter-handler": "^2.0",
+        "simple-bus/message-bus": "^2.2",
+        "simple-bus/symfony-bridge": "^4.1",
+        "doctrine/doctrine-fixtures-bundle": "^2.3",
+        "nelmio/alice": "^2.2"
     },
     "require-dev": {
         "sensio/generator-bundle": "^3.0",
