--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,7 @@
 app:
     resource: "@AcmeAppBundle/Controller/"
     type:     annotation
+
+blog:
+    resource: "@AcmeBlogBundle/Controller/"
+    type:     annotation
