--- a/app/config/framework/doctrine.yml
+++ b/app/config/framework/doctrine.yml
@@ -14,8 +14,8 @@ doctrine:
         naming_strategy: doctrine.orm.naming_strategy.underscore
         auto_mapping: true
         resolve_target_entities:
-            Acme\Domain\Blog\Model\Author:   Acme\Infrastructure\Bundle\AppBundle\Entity\User
-            Acme\Domain\Blog\Model\Category: Acme\Infrastructure\Bundle\BlogBundle\Entity\CategoryEntity
-            Acme\Domain\Blog\Model\Comment:  Acme\Infrastructure\Bundle\BlogBundle\Entity\CommentEntity
-            Acme\Domain\Blog\Model\Post:     Acme\Infrastructure\Bundle\BlogBundle\Entity\PostEntity
-            Acme\Domain\Blog\Model\Tag:      Acme\Infrastructure\Bundle\BlogBundle\Entity\TagEntity
+            Acme\Domain\Blog\Model\Author:   Acme\Infrastructure\Bundle\AppBundle\Entity\AuthorEntity
+            Acme\Domain\Blog\Model\Category: Acme\Infrastructure\Bundle\AppBundle\Entity\CategoryEntity
+            Acme\Domain\Blog\Model\Comment:  Acme\Infrastructure\Bundle\AppBundle\Entity\CommentEntity
+            Acme\Domain\Blog\Model\Post:     Acme\Infrastructure\Bundle\AppBundle\Entity\PostEntity
+            Acme\Domain\Blog\Model\Tag:      Acme\Infrastructure\Bundle\AppBundle\Entity\TagEntity
