--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ cache:
 
 before_install:
   - composer selfupdate
-  - composer require --global phpunit/phpunit
+  - composer global require phpunit/phpunit
 
 install: composer install --prefer-dist --no-interaction $COMPOSER_FLAGS
 
